Fix issue with navbar dropdown menu overlapping contact form, (overhaul flex-direction of navlinks and shorten height)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,9 +326,9 @@ p   {
         left: 30px;
     }
     .nav-links {
-        flex-direction: column;
+        flex-direction: row;
         width: 100%;
-        height: 100vh;
+        height: 20vh;
         justify-content: center;
         background: rgba(185, 185, 185, 0.863);
         margin-top: -1400px;
@@ -337,7 +337,6 @@ p   {
 
     .mobile-menu {
         margin-top: 0px;
-        border-bottom-right-radius: 30%;
     }
 
     .nav-links li {
